<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <string name="app_name">Football Spin</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="version_s">Version: %s</string>
    <string name="spin">Spin</string>

    <string name="empty_email">Please provide a non empty email.</string>
    <string name="invalid_email">Please provide a valid email.</string>
    <string name="empty_password">Please provide a non empty password.</string>
    <string name="ok">OK</string>
    <string name="vs">vs</string>

    <string-array name="dummy">
        <item>Pasta</item>
        <item>Pizza</item>
        <item>Chocolate</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="fragment_home">Home</string>
    <string name="fragment_result">Result</string>
    <string name="fragment_settings">Settings</string>
    <string name="select_team_list">Select Team List</string>
    <string name="recent_match">Recent Match</string>
    <string name="join_players">Joined Players</string>
    <string name="no_player_content">Hãy thêm người chơi để bắt đầu</string>
    <string name="add_new_player">Add New Player</string>
    <string name="start">Start</string>
    <string name="username">Username</string>
    <string name="add">Add</string>
    <string name="nickname">Fullname</string>
    <string name="error_input_all">Please complete all fields</string>
    <string name="demo">demo</string>
    <string name="error_database">Error on local database</string>
    <string name="finish">Finish</string>
    <string name="select_enough_team">Selected enough %d team</string>
    <string name="selected_number">Selected: %d teams</string>
    <string name="start_game">Start Game</string>
    <string name="select">Select</string>
    <string name="no_match">No recent match</string>
    <string name="no_team">No team</string>
    <string name="team_1">Foolball Club 1</string>
    <string name="team_2">Football Club 2</string>
    <string name="played_all_teams">Played all team!</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="update_result">Update result</string>
    <string name="save_match_successful">Save match successful</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="score">Score</string>
    <string name="red_card">Red Card</string>
    <string name="yellow_card">Yellow Card</string>
    <string name="please_update_score">Please update match score</string>
    <string name="please_select_at_least_2_players">Please select at least 2 players</string>
    <string name="please_select_teams">Please select teams for players</string>
</resources>
