<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
    <LinearLayout
            android:id="@+id/section_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_centerInParent="true"
            android:orientation="vertical">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="40dp"
                android:orientation="vertical">

            <EditText android:layout_width="match_parent"
                      android:layout_height="50dp"
                      android:hint="@string/email"
                      android:layout_marginBottom="8dp"/>

            <EditText android:layout_width="match_parent"
                      android:layout_height="50dp"
                      android:hint="@string/password"/>

            <Button
                    android:id="@+id/btn_server_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="40dp"
                    android:padding="10dp"
                    android:text="@string/login"
                    android:textSize="18sp"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginBottom="40dp"
                android:orientation="horizontal">

            <ImageButton
                    android:id="@+id/ib_google_login"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@color/transparent"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/ic_google_plus"/>

            <ImageButton
                    android:id="@+id/ib_fb_login"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="24dp"
                    android:background="@color/transparent"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/ic_facebook"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_above="@id/section_login"
            android:layout_marginBottom="50dp"
            android:layout_centerHorizontal="true"
            android:textAllCaps="true"
            android:textSize="24sp"/>
</RelativeLayout>