<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/layout_padding_left"
        android:paddingRight="@dimen/layout_padding_left"
        tools:context="com.tafi.footballspin.ui.main.NewPlayerActivity">

    <TextView
            android:id="@+id/header"
            style="@style/HeaderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_new_player"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/username"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header" />

    <EditText
            android:id="@+id/edt_username"
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_edittext_height"
            android:layout_marginTop="8dp"
            android:imeOptions="actionNext"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            tools:layout_editor_absoluteX="40dp" />

    <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/nickname"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/edt_username" />

    <EditText
            android:id="@+id/edt_nickname"
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_edittext_height"
            android:layout_marginTop="8dp"
            android:imeOptions="actionNext"
            app:layout_constraintTop_toBottomOf="@+id/textView9"
            tools:layout_editor_absoluteX="40dp" />

    <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Avatar Drawable Name"
            app:layout_constraintStart_toStartOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/edt_nickname" />

    <EditText
            android:id="@+id/edt_avatar_url"
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_edittext_height"
            android:layout_marginTop="8dp"
            android:imeOptions="actionDone"
            app:layout_constraintTop_toBottomOf="@+id/textView10"
            tools:layout_editor_absoluteX="40dp" />

    <Button
            android:id="@+id/btn_add"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:layout_marginBottom="@dimen/bottom_button_margin_bottom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
