<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context="com.tafi.footballspin.ui.teamselect.TeamSelectActivity">

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_bound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="40dp" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_bound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="40dp" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottom_bound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="120dp" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/top_bound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="90dp" />

    <TextView
            android:id="@+id/tv_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/add_new_player"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/img_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/img_back" />

    <Button
            android:id="@+id/btn_finish"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/add"
            app:layout_constraintEnd_toStartOf="@+id/right_bound"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/left_bound"
            app:layout_constraintTop_toTopOf="@+id/bottom_bound" />

    <ImageView
            android:id="@+id/img_back"
            android:layout_width="@dimen/default_icon_size"
            android:layout_height="@dimen/default_icon_size"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@null"
            android:padding="@dimen/default_icon_padding"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/username"
            app:layout_constraintStart_toStartOf="@+id/left_bound"
            app:layout_constraintTop_toTopOf="@+id/top_bound" />

    <EditText
            android:id="@+id/edt_username"
            android:layout_width="0dp"
            android:layout_height="@dimen/default_edittext_height"
            android:layout_marginTop="8dp"
            android:imeOptions="actionNext"
            app:layout_constraintEnd_toStartOf="@+id/right_bound"
            app:layout_constraintStart_toStartOf="@+id/left_bound"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/nickname"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/edt_username" />

    <EditText
            android:id="@+id/edt_nickname"
            android:layout_width="0dp"
            android:layout_height="@dimen/default_edittext_height"
            android:layout_marginTop="8dp"
            android:imeOptions="actionNext"
            app:layout_constraintEnd_toStartOf="@+id/right_bound"
            app:layout_constraintStart_toStartOf="@+id/left_bound"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Avatar Drawable Name"
            app:layout_constraintStart_toStartOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/edt_nickname" />

    <EditText
            android:id="@+id/edt_avatar_url"
            android:layout_width="0dp"
            android:layout_height="@dimen/default_edittext_height"
            android:layout_marginTop="8dp"
            android:imeOptions="actionDone"
            app:layout_constraintEnd_toStartOf="@+id/right_bound"
            app:layout_constraintStart_toStartOf="@+id/left_bound"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

</androidx.constraintlayout.widget.ConstraintLayout>
